--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
       <aside class="visual reveal js-visual">
         <div class="mock">
-          <img src="/images/snapshot.jpg" alt="project snapshot">
+          <img src="images/snapshot.jpg" alt="project snapshot">
           <div class="picDesc">Snapshot on our first journey in 1st Quarter ! (✿◠‿◠) </div>
         </div>
       </aside>
@@ -243,27 +243,27 @@
       <p class="lead">A snapshot of experiences and moments shared during the school year so far.</p>
       <div class="gallery">
         <div class="gallery-item">
-          <img src="/images/a0ddf796-215b-4975-87bc-dfa713dc7418.jpg" alt="photo1">
+          <img src="images/a0ddf796-215b-4975-87bc-dfa713dc7418.jpg" alt="photo1">
           <div class="picDesc">Friendship bonding while doing an activity◝(ᵔᗜᵔ)◜ </div>
         </div>
         <div class="gallery-item">
-          <img src="/images/study.PNG" alt="photo2">
+          <img src="images/study.PNG" alt="photo2">
           <div class="picDesc">Study calls with Emirah and Dean !! ( ˶°ㅁ°) !! </div>
         </div>
         <div class="gallery-item">
-          <img src="/images/faeoihfawnaw9gnawg.jpg" alt="photo3">
+          <img src="images/faeoihfawnaw9gnawg.jpg" alt="photo3">
           <div class="picDesc">⏔⏔⏔ ꒰ ᧔ෆ᧓ ꒱ ⏔⏔⏔</div>
         </div>
         <div class="gallery-item">
-          <img src="/images/5da1843b-1f55-4ab4-8d01-93af47b5153f.jpg" alt="photo4">
+          <img src="images/5da1843b-1f55-4ab4-8d01-93af47b5153f.jpg" alt="photo4">
           <div class="picDesc">In the class, doing mscs tasks together ʚଓ</div>
         </div>
         <div class="gallery-item">
-          <img src="/images/9d2df020-8f43-4156-afdf-ec414ccfb203.jpg" alt="photo5">
+          <img src="images/9d2df020-8f43-4156-afdf-ec414ccfb203.jpg" alt="photo5">
           <div class="picDesc">Placed 1st place in kahoot w teamwork ⋆˙⟡ </div>
         </div>
         <div class="gallery-item">
-          <img src="/images/da9e6d64-aa50-4674-a2b9-34b572d7dce6.jpg" alt="photo6">
+          <img src="images/da9e6d64-aa50-4674-a2b9-34b572d7dce6.jpg" alt="photo6">
           <div class="picDesc">Teamwork in action !</div>
         </div>
       </div>
@@ -292,4 +292,5 @@
 </script>
 
 </body>
+
 </html>
